--- a/css/cell2.css
+++ b/css/cell2.css
@@ -1,11 +1,13 @@
+#wrap {
+    margin: 8em auto;
+}
+
 .toggle-title {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 1.3em;
-
-    margin-top: 8em;
     margin-bottom: 5em;
 }
 
