--- a/css/cell2.css
+++ b/css/cell2.css
@@ -1,5 +1,10 @@
 #wrap {
-    margin: 8em auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 100%;
 }
 
 .toggle-title {
