--- a/css/general.css
+++ b/css/general.css
@@ -20,7 +20,7 @@
     padding: 0;
     margin: 0;
 
-    font-family: 'NanumBarunPen';
+    font-family: 'NanumBarunPen', sans-serif;
     color: #000;
 }
 
